[gd_scene load_steps=48 format=3 uid="uid://csnu5oe1jw6ks"]

[ext_resource type="Script" uid="uid://donbbsbhu5u0y" path="res://Scripts/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Texture2D" uid="uid://bf2cpqvg076eq" path="res://Assets/Anokolisa/Legacy Action Pack - STARSHIP/Character/Sheets/Full-Sheet-Green.png" id="1_uvnfx"]
[ext_resource type="Texture2D" uid="uid://byynmsf67ep5o" path="res://Assets/Custom/Custom-Sheet-Green.png" id="2_mtuoh"]
[ext_resource type="Script" uid="uid://du2p1s5m7nt6x" path="res://Scripts/Player/aim_node.gd" id="3_xpcdj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3d8c"]
radius = 7.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h5u0x"]
atlas = ExtResource("2_mtuoh")
region = Rect2(2876, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpcdj"]
atlas = ExtResource("1_uvnfx")
region = Rect2(80, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtuoh"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2456, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_htcer"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2528, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd0ac"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2600, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u5uq"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2672, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2744, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2816, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = ExtResource("1_uvnfx")
region = Rect2(8, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1880, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1952, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2024, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2096, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2168, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2240, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2312, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("1_uvnfx")
region = Rect2(2384, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm4k"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1304, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1376, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ma5"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1448, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_eksi1"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1520, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jincj"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1592, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqdc0"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1664, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr1w5"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1736, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythyg"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1808, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmb2s"]
atlas = ExtResource("1_uvnfx")
region = Rect2(728, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur3l4"]
atlas = ExtResource("1_uvnfx")
region = Rect2(800, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ahak"]
atlas = ExtResource("1_uvnfx")
region = Rect2(872, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rukb4"]
atlas = ExtResource("1_uvnfx")
region = Rect2(944, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_4no11"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1016, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcwna"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1088, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_1agin"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1160, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jnj1"]
atlas = ExtResource("1_uvnfx")
region = Rect2(1232, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_enij7"]
atlas = ExtResource("1_uvnfx")
region = Rect2(152, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwii3"]
atlas = ExtResource("1_uvnfx")
region = Rect2(224, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aanf"]
atlas = ExtResource("1_uvnfx")
region = Rect2(296, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6ahd"]
atlas = ExtResource("1_uvnfx")
region = Rect2(368, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogmfp"]
atlas = ExtResource("1_uvnfx")
region = Rect2(440, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixrbb"]
atlas = ExtResource("1_uvnfx")
region = Rect2(512, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei2r2"]
atlas = ExtResource("1_uvnfx")
region = Rect2(584, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6uq4"]
atlas = ExtResource("1_uvnfx")
region = Rect2(656, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_h5u0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5u0x")
}],
"loop": true,
"name": &"aim_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpcdj")
}],
"loop": true,
"name": &"aim_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtuoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htcer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd0ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ma5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eksi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jincj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqdc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr1w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ythyg")
}],
"loop": true,
"name": &"run_aim_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmb2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur3l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ahak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rukb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4no11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcwna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1agin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jnj1")
}],
"loop": true,
"name": &"run_aim_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enij7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwii3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aanf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ahd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogmfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixrbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6uq4")
}],
"loop": true,
"name": &"run_neutral",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_a3d8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 8)
shape = SubResource("CapsuleShape2D_a3d8c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h5u0x")
animation = &"aim_down"
autoplay = "idle"
flip_h = true

[node name="AimNode" type="Node2D" parent="."]
script = ExtResource("3_xpcdj")

[node name="RightPosition" type="Marker2D" parent="AimNode"]
position = Vector2(16, 0)

[node name="RightDownPosition" type="Marker2D" parent="AimNode"]
position = Vector2(16, 12)
rotation = 0.479966

[node name="LeftDownPosition" type="Marker2D" parent="AimNode"]
position = Vector2(-16, 12)
rotation = 2.67908

[node name="UpPosition" type="Marker2D" parent="AimNode"]
position = Vector2(0, -19)
rotation = -1.5708

[node name="DownPosition" type="Marker2D" parent="AimNode"]
position = Vector2(0, 19)
rotation = 1.5708

[node name="LeftPosition" type="Marker2D" parent="AimNode"]
position = Vector2(-16, 0)
rotation = 3.14159

[node name="RightUpPosition" type="Marker2D" parent="AimNode"]
position = Vector2(14, -12)
rotation = -0.479966

[node name="LeftUpPosition" type="Marker2D" parent="AimNode"]
position = Vector2(-14, -12)
rotation = -2.67908
